# mtl

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  Doxyfile  README.md  conanfile.py
include/mtl/: Assert.hpp  BitFun.hpp  Common.hpp  Config.hpp  Macros.hpp  TypeTraits.hpp  all.hpp  assert.hpp  common.hpp  config.hpp  version.hpp
include/mtl/meta/: meta.hpp
include/mtl/random/: all.hpp  jsf.hpp  rng.hpp
include/mtl/rng/: All.hpp  Rng.hpp  Rng.ipp  SplitMix64.hpp  Xoshiro256.hpp
include/mtl/rng/engines/: SplitMix64Engine.hpp  SplitMix64Engine.ipp  Xoshiro256StarStarEngine.hpp  Xoshiro256StarStarEngine.ipp
include/mtl/utility/: all.hpp  bits.hpp  ints.hpp  traits.hpp
source/mtl/rng/: Rng.cpp
source/mtl/rng/engines/: SplitMix64Engine.cpp  Xoshiro256StarStarEngine.cpp
tests/: main.cpp
